<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/hello_user"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/findFlightBtn"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:text="@string/find_a_flight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bookedFlightsBtn"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_booked_flights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findFlightBtn" />

    <Button
        android:id="@+id/adminBtn"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:layout_marginTop="150dp"
        android:text="@string/admin"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookedFlightsBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>